--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							 </div>
 	                     </a></div>
 	                     <h4><a href="#"> Vanessa Medina Ruiz </a><br><span class="ceo">Medico General</span></h4>
-	                     <p>ffffffffffdsdsdsdsd</p>
+	                     <p>Medica General, Egresada de la Universidad Metropolitana de Barranquilla - Colombia</p>
 	                     <ul class="social">
 							<li><a href=""> <i class="fb"> </i> </a></li>
 							<li><a href=""><i class="tw"> </i> </a></li>
@@ -398,7 +398,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							 </div>
 	                     </a></div>
 	                     <h4><a href="#">Julieth Medina Ruiz </a><br><span class="ceo">Medico General</span></h4>
-	                     <p>velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum</p>
+	                     <p>Medica General, Egresada de la Universidad Metropolitana de Barranquilla - Colombia</p>
 	                     <ul class="social">
 							<li><a href=""> <i class="fb"> </i> </a></li>
 							<li><a href=""><i class="tw"> </i> </a></li>
