--- a/index.html
+++ b/index.html
@@ -443,14 +443,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
    	   		<div class="container">
    	   			<form method="post" action="contact-post.html">
 					<div class="contact-to">
-                     	<input type="text" class="text" value="Name..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name...';}">
+                     	<input type="text" class="text" value="Nombres..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name...';}">
 					 	<input type="text" class="text" value="Email..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email...';}" style="margin-left:30px">
 					</div>
 					<div class="text2">
-	                   <textarea value="Message:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}">Message..</textarea>
+	                   <textarea value="Message:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}">Mensaje..</textarea>
 	                </div>
 	                <div class="contact_btn">
-	               		<input name="submit your message" type="submit" id="submit" value="Submit your Message">
+	               		<input name="submit your message" type="submit" id="submit" value="Enviar">
 	                </div>
 	                <div class="clearfix"> </div>
 	            </form>
@@ -469,7 +469,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	            </div>
    	   		    <div class="copy">
    	   			  <div class="container">
-			         <p>&copy;2014 Template by <a href="http://w3layouts.com" target="_blank"> w3layouts</a></p>
+			         <p>&copy;2017 Desing by <a href="http://w3layouts.com" target="_blank"> Jeralsoft</a></p>
 			       </div>
 			       <script type="text/javascript">
 						$(document).ready(function() {
