--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>IPS SALUD PARA SUCRE SAS| IPSPS</title>
+<title>IPS SALUD PARA SUCRE SAS</title>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
@@ -107,18 +107,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<h1>IPS SALUD PARA SUCRE SAS</h1>
 						<h2>PORQUE PRIMERO ESTAS TÚ</h2>
 						<ul class="banner_btn">
-						   <li class="grey"><a href="#">Empieza</a></li>
-						   <li class="yellow"><a href="#">Más Informacion</a></li>
+						   <li class="grey"><a href="#">EMPIEZA</a></li>
+						   <li class="yellow"><a href="#">APRENDE MÁS</a></li>
 		    			 </ul>
 					</div>
 				</article>
 				<article style="position: absolute; width: 100%; opacity: 0;"> 
 				   	<div class="banner-wrap">
-						<h1>SERVICIOS CON CALIDAD HUMANA</h1>
-						<h2>PRIMERO TÚ SALUD</h2>
+						<h1>SERVICIO CON CALIDAD</h1>
+						<h2>PORQUE TU NOS IMPORTA</h2>
 						<ul class="banner_btn">
-						   <li class="grey"><a href="#">Empieza</a></li>
-						   <li class="yellow"><a href="#">Más Informacion</a></li>
+						   <li class="grey"><a href="#">EMPIEZA</a></li>
+						   <li class="yellow"><a href="#">APRENDE MÁS</a></li>
 		    			 </ul>
 					 </div>
 				</article>
@@ -131,22 +131,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
    	   <div class="main">
    	   	 <div class="content_top" id="about">
    	   	 	<div class="container">
-   	   	 		<h2>We are the Best</h2>
+   	   	 		<h2>Acerca de Nosotros</h2>
    	   	 		<p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum</p>
    	   	 		<div class="row">
 	   	   	 		<div class="col-md-4 service_box">
 		  				<i class="icon1"> </i>
-		  				<h3><a href='#'>Resourceful</a></h3>
+		  				<h3><a href='#'>INGENIO</a></h3>
 		  				<p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo</p>
 		  			</div>
 		  			<div class="col-md-4 service_box">
 		  				<i class="icon2"> </i>
-		  				<h3><a href='#'>Healthy</a></h3>
+		  				<h3><a href='#'>TU SALUD</a></h3>
 		  				<p>Enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo Ut wisi</p>
 		  			</div>
 		  			<div class="col-md-4 service_box">
 		  				<i class="icon3"> </i>
-		  				<h3><a href='#'>Natural</a></h3>
+		  				<h3><a href='#'>NATURAL</a></h3>
 		  				<p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo</p>
 		  			</div>
 		  		</div>
@@ -159,7 +159,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			        <span> </span>
 		          </div>
 		          <div class="col-md-8 access-right">
-					<h3><span class="thick">Easy</span> To Access<a class="link"><img src="images/more.png" alt=""/></a></h3>
+					<h3><span class="thick">FÁCIL</span>  PARA ACCEDER<a class="link"><img src="images/more.png" alt=""/></a></h3>
 					<p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit</p>
 					<p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit</p>
                   </div>
@@ -170,15 +170,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
    	    <div class="services" id="services">
    	   		<div class="container">
    	   			<div class="service_top">
-   	   				<h3>Our Services</h3>
-   	   				<p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica</p>
+   	   				<h3>NUESTROS SERVICIOS</h3>
+   	   				<p>Los Servicios que Presta la IPS SALUD PARA SUCRE SAS, son los siguientes</p>
    	   			</div>
    	   			<div class="row">
    	   				<div class="col-md-6 service_box">
    	   					<ul class="service_grid">
    	   						<i class="s1"> </i>
    	   						<li class="desc">
-   	   							<h4><a href="#">Claritas est</a></h4>
+   	   							<h4><a href="#">MEDICINA GENERAL</a></h4>
    	   							<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum</p>
    	   						</li>
    	   						<div class="clearfix"> </div>
@@ -186,7 +186,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
    	   					<ul class="service_grid">
    	   						<i class="s2"> </i>
    	   						<li class="desc">
-   	   							<h4><a href="#">Duis autem</a></h4>
+   	   							<h4><a href="#">ODONTOLOGIA</a></h4>
    	   							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci</p>
    	   						</li>
    	   						<div class="clearfix"> </div>
@@ -194,7 +194,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
    	   					<ul class="service_grid last">
    	   						<i class="s3"> </i>
    	   						<li class="desc">
-   	   							<h4><a href="#">Nam liber</a></h4>
+   	   							<h4><a href="#">ENFERMERIA</a></h4>
    	   							<p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum</p>
    	   						</li>
    	   						<div class="clearfix"> </div>
@@ -204,7 +204,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
    	   					<ul class="service_grid">
    	   						<i class="s4"> </i>
    	   						<li class="desc">
-   	   							<h4><a href="#">Eodem modo </a></h4>
+   	   							<h4><a href="#">TOMA DE MUESTRA DE LABORATORIO</a></h4>
    	   							<p>Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me mutationem consuetudium lectorum. Mirum </p>
    	   						</li>
    	   						<div class="clearfix"> </div>
@@ -232,7 +232,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
    	   	<div class="features" id="features">
    	   	  <div class="container">
    	   	  	 <div class="feature_top">
-				<h3><span class="feature">Some</span> of the Features</h3>
+				<h3><span class="feature">ALGUNAS </span> DE LAS CARACTERÍSTICAS</h3>
 				<i class="phone"> </i>
 			 </div>
    	       </div>
@@ -240,7 +240,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
    	   	<div class="services" id="work">
    	   		<div class="container">
    	   			<div class="service_top">
-   	   				<h3>Why Work With Us</h3>
+   	   				<h3>POR QUÉ TRABAJAR CON NOSOTROS</h3>
    	   				<p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica</p>
    	   			</div>
    	   			<div class="row service_grid">
@@ -353,8 +353,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
    	 <div class="team" id="team">
    	 	<div class="container">
    	 		<div class="service_top">
-   	   				<h3>Nuestro Equipo de Trabajo</h3>
-   	   				<p>Nuestro equipo de trabajo esta conformado por un grupo de personas idoneas y con etica profesional.</p>
+   	   				<h3>CONOCER AL EQUIPO DE TRABAJO</h3>
+   	   				<p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica</p>
    	   			</div>
    	   			<div class="team_grids text-center">
    	   				<div class="col-md-4 team_grid">
@@ -367,14 +367,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	                     </div>
 	                         <div id="small-dialog3" class="mfp-hide">
 								   <div class="pop_up2">
-								   	   <h3>Más Informacion</h3>
-									   <h4>xxxxxxxxxxxxx</h4>
-									   <p>cccccccccccccccccccccccccccccccccccccccccc.</p>
+								   	   <h3>Lorem Ipsum</h3>
+									   <h4>Senior UI Designer</h4>
+									   <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.</p>
 								   </div>
 							 </div>
 	                     </a></div>
-	                     <h4><a href="#"> Vanessa Medina Ruiz </a><br><span class="ceo">Medico General</span></h4>
-	                     <p>Medica General, Egresada de la Universidad Metropolitana de Barranquilla - Colombia</p>
+	                     <h4><a href="#"> Nam liber </a><br><span class="ceo">CEO</span></h4>
+	                     <p>velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum</p>
 	                     <ul class="social">
 							<li><a href=""> <i class="fb"> </i> </a></li>
 							<li><a href=""><i class="tw"> </i> </a></li>
@@ -391,14 +391,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	                     </div>
 	                         <div id="small-dialog3" class="mfp-hide">
 								   <div class="pop_up2">
-								   	   <h3>fffff</h3>
+								   	   <h3>Lorem Ipsum</h3>
 									   <h4>Senior UI Designer</h4>
 									   <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.</p>
 								   </div>
 							 </div>
 	                     </a></div>
-	                     <h4><a href="#">Julieth Medina Ruiz </a><br><span class="ceo">Medico General</span></h4>
-	                     <p>Medica General, Egresada de la Universidad Metropolitana de Barranquilla - Colombia</p>
+	                     <h4><a href="#"> Nam liber </a><br><span class="ceo">Graphic Designer</span></h4>
+	                     <p>velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum</p>
 	                     <ul class="social">
 							<li><a href=""> <i class="fb"> </i> </a></li>
 							<li><a href=""><i class="tw"> </i> </a></li>
@@ -421,7 +421,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								   </div>
 							 </div>
 	                     </a></div>
-	                     <h4><a href="#"> Dody Bejarano </a><br><span class="ceo">Odontologo</span></h4>
+	                     <h4><a href="#"> Nam liber </a><br><span class="ceo">Lead Developer</span></h4>
 	                     <p>velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum</p>
 	                     <ul class="social">
 							<li><a href=""> <i class="fb"> </i> </a></li>
@@ -450,12 +450,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	                   <textarea value="Message:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}">Mensaje..</textarea>
 	                </div>
 	                <div class="contact_btn">
-	               		<input name="submit your message" type="submit" id="submit" value="Enviar">
+	               		<input name="submit your message" type="submit" id="submit" value="Enviar Mensaje">
 	                </div>
 	                <div class="clearfix"> </div>
 	            </form>
 	            <div class="about">
-	               	  <h4>About Us</h4>
+	               	  <h4>Sobre Nosotros</h4>
 	               	  <p>dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum</p>
 	                  <a href="#"><img src="images/f-logo.png" alt=""/></a>
 	                   <ul class="f_social">
@@ -469,7 +469,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	            </div>
    	   		    <div class="copy">
    	   			  <div class="container">
-			         <p>&copy;2017 Desing by <a href="http://w3layouts.com" target="_blank"> Jeralsoft</a></p>
+			         <p>&copy;2016 Desing by <a href="http://w3layouts.com" target="_blank"> Jeralsoft</a></p>
 			       </div>
 			       <script type="text/javascript">
 						$(document).ready(function() {
