--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
    	 <div class="team" id="team">
    	 	<div class="container">
    	 		<div class="service_top">
-   	   				<h3>CONOCER AL EQUIPO DE TRABAJO</h3>
-   	   				<p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica</p>
+   	   				<h3>NUESTRO EQUIPO DE TRABAJO</h3>
+   	   				<p>Nuestro equipo de trabajo esta conformado por un grupo de personas idoneas y con etica profesional.</p>
    	   			</div>
    	   			<div class="team_grids text-center">
    	   				<div class="col-md-4 team_grid">
@@ -373,8 +373,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								   </div>
 							 </div>
 	                     </a></div>
-	                     <h4><a href="#"> Nam liber </a><br><span class="ceo">CEO</span></h4>
-	                     <p>velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum</p>
+	                     <h4><a href="#"> VANESSA MEDINA RUIZ </a><br><span class="ceo">MEDICO GENERAL</span></h4>
+	                     <p>Medica General, Egresada de la Universidad Metropolitana de Barranquilla -  Colombia</p>
 	                     <ul class="social">
 							<li><a href=""> <i class="fb"> </i> </a></li>
 							<li><a href=""><i class="tw"> </i> </a></li>
@@ -391,14 +391,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	                     </div>
 	                         <div id="small-dialog3" class="mfp-hide">
 								   <div class="pop_up2">
-								   	   <h3>Lorem Ipsum</h3>
-									   <h4>Senior UI Designer</h4>
+								   	   <h3>Vanessa Medina Ruiz</h3>
+									   <h4>Doctora</h4>
 									   <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.</p>
 								   </div>
 							 </div>
 	                     </a></div>
-	                     <h4><a href="#"> Nam liber </a><br><span class="ceo">Graphic Designer</span></h4>
-	                     <p>velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum</p>
+	                     <h4><a href="#"> JULIETH MEDINA RUIZ </a><br><span class="ceo">MEDICO GENERAL</span></h4>
+	                     <p>Medica General, Egresada de la Universidad Metropolitana de Barranquilla -  Colombia</p>
 	                     <ul class="social">
 							<li><a href=""> <i class="fb"> </i> </a></li>
 							<li><a href=""><i class="tw"> </i> </a></li>
@@ -421,8 +421,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								   </div>
 							 </div>
 	                     </a></div>
-	                     <h4><a href="#"> Nam liber </a><br><span class="ceo">Lead Developer</span></h4>
-	                     <p>velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum</p>
+	                     <h4><a href="#"> DORDY BEJARANO </a><br><span class="ceo">ODONTOLOGO</span></h4>
+	                     <p>Medica General, Egresada de la Universidad Libre de Barranquilla -  Colombia</p>
 	                     <ul class="social">
 							<li><a href=""> <i class="fb"> </i> </a></li>
 							<li><a href=""><i class="tw"> </i> </a></li>
@@ -469,7 +469,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	            </div>
    	   		    <div class="copy">
    	   			  <div class="container">
-			         <p>&copy;2016 Desing by <a href="http://w3layouts.com" target="_blank"> Jeralsoft</a></p>
+			         <p>&copy;2017 Desing by <a href="http://w3layouts.com" target="_blank"> Jeralsoft</a></p>
 			       </div>
 			       <script type="text/javascript">
 						$(document).ready(function() {
