--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
    	   		</div>
    	   		<div class="call">
    	   			<div class="container">
-   	   				<h3 class="call_text">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore.&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/more.png" alt=""/></h3>
+   	   				<h3 class="call_text">IPS SALUD PARA SUCRE SAS, comprometida con tu salud.&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/more.png" alt=""/></h3>
    	   			</div>
    	   		</div>
    	   	  </div>
